alignment issues fixed

--- a/style.css
+++ b/style.css
@@ -136,15 +136,15 @@ input[type=checkbox] {
 }
 #mag_viewer_1 {
   left: 1020px;
-  top: 1275px;
+  top: 1280px;
 }
 #mag_viewer_2 {
   left: 1020px;
-  top: 1520px;
+  top: 1525px;
 }
 #mag_viewer_3 {
   left: 1020px;
-  top: 1765px;
+  top: 1770px;
 }
 
 /*For Dark Mode Style*/
